talos/manifests/argocd-ingress.yaml
# 2. On dit à Traefik d'exposer le service d'ArgoCD en utilisant ce certificat.
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  # On écoute sur le point d'entrée sécurisé (HTTPS/443).
  entryPoints:
    - websecure
  routes:
    # Si la requête est pour "argocd.truxonline.com"...
    - match: Host(`argocd.truxonline.com`)
      kind: Rule
      services:
        # ...on la redirige vers le service de l'interface d'ArgoCD.
        - name: argocd-server
          port: 80 # Traefik gère le TLS, on peut donc cibler le port HTTP du service.
  # On dit à Traefik d'utiliser le certificat qui sera créé par cert-manager.
  tls:
    secretName: argocd-ui-tls-secret
